methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:20: error: not found: value avancer
    for(n <- 1 to 6) avancer;
                     ^